third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/datetime/offset-overflow-minute.stderr
TOML parse error at line 3, column 28
  |
3 | d = 1985-06-18 17:04:07+12:61
  |                            ^
invalid time offset
value is out of range
